[gd_scene load_steps=26 format=3 uid="uid://ddmov0byk4nyt"]

[ext_resource type="Script" uid="uid://7u3vo1rhfj4i" path="res://Characters/Player/player.gd" id="1_87lbx"]
[ext_resource type="Texture2D" uid="uid://ccoyujynrtnaq" path="res://Assets/playerSprites/p1.png" id="2_5elsd"]
[ext_resource type="Script" uid="uid://dd0omw0aw75k3" path="res://Characters/Player/state_label.gd" id="2_648is"]
[ext_resource type="Texture2D" uid="uid://bxqiyocol5ota" path="res://Assets/playerSprites/IMG_5261.png" id="2_b6jp0"]
[ext_resource type="Script" uid="uid://bkk4s3kklivq4" path="res://Characters/Player/PSM/player_state_machine.gd" id="2_ilmk5"]
[ext_resource type="Texture2D" uid="uid://cdhnjvg7ua8ee" path="res://Assets/playerSprites/p2.png" id="3_blwrb"]
[ext_resource type="Script" uid="uid://cyrulapc13n6j" path="res://Characters/Player/PSM/state_idle.gd" id="3_pkcoo"]
[ext_resource type="Texture2D" uid="uid://b5hof4wggmm6i" path="res://Assets/playerSprites/frame_0_delay-0.17s.png" id="3_x58m1"]
[ext_resource type="Texture2D" uid="uid://5w3o8nubufor" path="res://Assets/playerSprites/frame_1_delay-0.17s.png" id="4_b6jp0"]
[ext_resource type="Texture2D" uid="uid://bex42wcc8tahh" path="res://Assets/playerSprites/p3.png" id="4_hvtal"]
[ext_resource type="Script" uid="uid://cjavn2idyp2ow" path="res://Characters/Player/States/move_state.gd" id="4_pkcoo"]
[ext_resource type="Texture2D" uid="uid://efx0i2g06el3" path="res://Assets/playerSprites/frame_2_delay-0.17s.png" id="5_8k5s7"]
[ext_resource type="Script" uid="uid://b0hfnsuo7dsry" path="res://Characters/Player/States/air_state.gd" id="5_ow5jq"]
[ext_resource type="Texture2D" uid="uid://53poncvrsye" path="res://Assets/playerSprites/frame_3_delay-0.17s.png" id="6_5elsd"]
[ext_resource type="Script" uid="uid://b1ygtesn6g0c6" path="res://Characters/Player/States/attack_state.gd" id="6_gw5kw"]
[ext_resource type="Script" uid="uid://c7qaf4sy8hwkr" path="res://Characters/Player/hurt_state.gd" id="8_yhol4"]
[ext_resource type="PackedScene" uid="uid://c3su5gusmiif6" path="res://Characters/Player/player_ui.tscn" id="9_eg6gc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b6jp0"]
radius = 95.885345

[sub_resource type="CircleShape2D" id="CircleShape2D_x58m1"]
radius = 90.113815

[sub_resource type="SpriteFrames" id="SpriteFrames_8fwmd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_5elsd")
}, {
"duration": 1.0,
"texture": ExtResource("3_blwrb")
}, {
"duration": 1.0,
"texture": ExtResource("4_hvtal")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("2_b6jp0")
}],
"loop": false,
"name": &"hurt",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_x58m1")
}, {
"duration": 1.0,
"texture": ExtResource("4_b6jp0")
}, {
"duration": 1.0,
"texture": ExtResource("5_8k5s7")
}, {
"duration": 1.0,
"texture": ExtResource("6_5elsd")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gw5kw"]
size = Vector2(250, 100)

[sub_resource type="Animation" id="Animation_b6jp0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Pivot/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_x58m1"]
resource_name = "attack"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Pivot/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8k5s7"]
resource_name = "hurt"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../Pivot/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8k5s7"]
_data = {
&"RESET": SubResource("Animation_b6jp0"),
&"attack": SubResource("Animation_x58m1"),
&"hurt": SubResource("Animation_8k5s7")
}

[node name="player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_87lbx")
friction = 0.2
acceleration = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_bottom = -25
limit_smoothed = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.3
drag_top_margin = 0.7
drag_right_margin = 0.3
drag_bottom_margin = 0.7

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4
monitorable = false
priority = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_b6jp0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1.5)
shape = SubResource("CircleShape2D_x58m1")

[node name="Pivot" type="Node2D" parent="."]

[node name="AttackArea" type="Area2D" parent="Pivot"]
z_index = 1
collision_layer = 0
collision_mask = 4

[node name="AttackAreaShape" type="CollisionShape2D" parent="Pivot/AttackArea"]
debug_color = Color(0.9925502, 0, 0.25687188, 0.41960785)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Pivot"]
position = Vector2(11, 22)
scale = Vector2(0.15, 0.15)
sprite_frames = SubResource("SpriteFrames_8fwmd")
animation = &"attack"
autoplay = "walk"
frame = 2
frame_progress = 1.0

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("player", "current_state")]
script = ExtResource("2_ilmk5")
player = NodePath("..")
current_state = NodePath("MoveState")

[node name="IdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("3_pkcoo")
metadata/_custom_type_script = "uid://cyrulapc13n6j"

[node name="MoveState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_pkcoo")
metadata/_custom_type_script = "uid://crtk80w68agh4"

[node name="AirState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_ow5jq")
metadata/_custom_type_script = "uid://crtk80w68agh4"

[node name="AttackState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_gw5kw")
attack_shape = SubResource("RectangleShape2D_gw5kw")
metadata/_custom_type_script = "uid://crtk80w68agh4"

[node name="Pink" type="AnimationPlayer" parent="PlayerStateMachine/AttackState"]
libraries = {
&"": SubResource("AnimationLibrary_8k5s7")
}

[node name="HurtState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_yhol4")
death_scene = "res://Menus/deathScene.tscn"
metadata/_custom_type_script = "uid://crtk80w68agh4"

[node name="Red" type="AnimationPlayer" parent="PlayerStateMachine/HurtState"]
libraries = {
&"": SubResource("AnimationLibrary_8k5s7")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerUI" parent="CanvasLayer" instance=ExtResource("9_eg6gc")]

[node name="StateLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
vertical_alignment = 2
script = ExtResource("2_648is")
